Major multilanguage changes.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -967,6 +967,7 @@
     "label.searchBy": "Search by estate code...",
     "label.searchByNamePhone": "Search by name,surname or phone ․․․",
     "label.searchMap": "Search map",
+    "label.searchResults": "Search Results",
     "label.seeAllComments": "He helped me during all the processes, including: Properly evaluate the apartment in the market, offering easy and best choices, assisting in negotiations. Finally, find a comfortable apartment. I strongly advise you to contact him.",
     "label.seeAllReview": "See all reviews",
     "label.selectAgent": "-Select agent",
