--- a/public/locales/hy/common.json
+++ b/public/locales/hy/common.json
@@ -934,6 +934,7 @@
     "label.searchBy": "Որոնում ըստ գույքի կոդի...",
     "label.searchByNamePhone": "Որոնել ըստ անվան, ազգանվան, հեռախոսահամարի ․․․",
     "label.searchMap": "Որոնում քարտեզով",
+    "label.searchResults": "Որոնման արդյունքներ",
     "label.seeAllComments": "Նա ինձ օգնեց բոլոր գործընթացների ժամանակ, այդ թվում. Ճիշտ գնահատել  բանակարանը շուկայում, առաջարկելով հեշտ և լավագույն ընտրութուն, աջակցելով  գնահատման հայտերի եւ բանակցությունների ժամանակ: Ի վերջո, Գտնել հարմարավետ բանակարան: Ես անպայման խորհուրդ եմ տալիս դիմել նրան:",
     "label.seeAllReview": "Դիտել բոլոր կարծիքները",
     "label.selectAgent": "-Ընտրել գործակալ-",
@@ -1036,7 +1037,7 @@
     "label.title.house": "առանձնատուն",
     "label.title.house.floor": " հարկանի",
     "label.title.house.sale": "առանձնատան վաճառք",
-    "label.title.houses": "ԱՌԱՆՁՆԱՏՆՆԵՐ",
+    "label.title.houses": "ԱՌԱՆՁՆԱՏՆԵՐ",
     "label.title.land": "ՀՈՂ",
     "label.title.lands": "ՀՈՂԱՄԱՍԵՐ",
     "label.title.province.yerevan": " ԵՐԵՎԱՆ",
