--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -113,7 +113,7 @@
     "label.aboutUsDesc": "RedInvest система, позволяющая всем специалистам на рынке недвижимости и смежным областям работать вместе, чтобы работать вместе с различными профессиональными и информационными базами для привлечения клиентов.",
     "label.activListings": "Активный список",
     "label.active": "Активный",
-    "label.addNewAnnouncement": "Новое объявления",
+    "label.addNewAnnouncement": "Новый запрос",
     "label.additional": "Дополнительно",
     "label.additionalDocuments": "Дополнительные документы",
     "label.additionalInformation": "Дополнительная информация",
