--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -200,7 +200,7 @@
     "label.bathroom.design": "Bathroom design",
     "label.bedroom.design": "Bedroom design",
     "label.beginningSearch": "Beginning",
-    "label.bestAgents": "The best agent",
+    "label.bestAgents": "The best agents",
     "label.bindingValue": "She is a very good agent, invested in real estate market skills and help us ..",
     "label.blocked": "Blocked",
     "label.blog": "Blog",
@@ -967,8 +967,10 @@
     "label.searchBy": "Search by estate code...",
     "label.searchByNamePhone": "Search by name,surname or phone ․․․",
     "label.searchMap": "Search map",
+    "label.searchResults": "Search Results",
     "label.seeAllComments": "He helped me during all the processes, including: Properly evaluate the apartment in the market, offering easy and best choices, assisting in negotiations. Finally, find a comfortable apartment. I strongly advise you to contact him.",
     "label.seeAllReview": "See all reviews",
+    "label.seeAll": "See all",
     "label.selectAgent": "-Select agent",
     "label.selectContractType": "-All types-",
     "label.selectOne": "-select one-",
