--- a/src/app/i18n/locales/hy/common.json
+++ b/src/app/i18n/locales/hy/common.json
@@ -934,8 +934,10 @@
     "label.searchBy": "Որոնում ըստ գույքի կոդի...",
     "label.searchByNamePhone": "Որոնել ըստ անվան, ազգանվան, հեռախոսահամարի ․․․",
     "label.searchMap": "Որոնում քարտեզով",
+    "label.searchResults": "Որոնման արդյունքներ",
     "label.seeAllComments": "Նա ինձ օգնեց բոլոր գործընթացների ժամանակ, այդ թվում. Ճիշտ գնահատել  բանակարանը շուկայում, առաջարկելով հեշտ և լավագույն ընտրութուն, աջակցելով  գնահատման հայտերի եւ բանակցությունների ժամանակ: Ի վերջո, Գտնել հարմարավետ բանակարան: Ես անպայման խորհուրդ եմ տալիս դիմել նրան:",
     "label.seeAllReview": "Դիտել բոլոր կարծիքները",
+    "label.seeAll": "Տեսնել բոլորը",
     "label.selectAgent": "-Ընտրել գործակալ-",
     "label.selectContractType": "-Բոլոր տեսակները-",
     "label.selectOne": "-Ընտրել մեկը-",
