--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -118,7 +118,7 @@
     "label.aboutUsDesc": "RedInvest система, позволяющая всем специалистам на рынке недвижимости и смежным областям работать вместе, чтобы работать вместе с различными профессиональными и информационными базами для привлечения клиентов.",
     "label.activListings": "Активный список",
     "label.active": "Активный",
-    "label.addNewAnnouncement": "Новое объявления",
+    "label.addNewAnnouncement": "Новый запрос",
     "label.additional": "Дополнительно",
     "label.additionalDocuments": "Дополнительные документы",
     "label.additionalInformation": "Дополнительная информация",
@@ -662,6 +662,7 @@
     "label.searchByNamePhone": "Поиск по имени, фамилии, номеру телефона ...",
     "label.seeAllComments": "Он помог мне во всех процессах, в том числе. Дал правильную оценку квартиры на рынке,предлагая легкие и верные решения, помогая во время переговоров.Под конец. Найти хорошую квартиру.Рекомендую обратиться именно к нему.",
     "label.seeAllReview": "Посмотреть все отзывы",
+    "label.seeAll": "Смотреть все",
     "label.selectAgent": "-Выбрать агента-",
     "label.selectContractType": "- Все типы-",
     "label.selectOne": "-Выбрать один-",
@@ -858,6 +859,7 @@
     "label.youCanChangePassAfterLogin": "(Вы можете изменить пароль после первого входа)",
     "label.yourNewPassword": "Ваш новый пароль",
     "label.searchMap": "Поиск по карте",
+    "label.searchResults": "Результаты поиска",
     "notification.confirmCodeIsInvalid": "Неверный код подтверждения.",
     "notification.contactDuplication": "Повторение номера телефона",
     "notification.copy.failed": "Ошибка при дублировании записи",
