--- a/src/app/i18n/locales/hy/common.json
+++ b/src/app/i18n/locales/hy/common.json
@@ -1248,5 +1248,7 @@
     "validation.year.required": "Կառուցման տարեթիվը պարտադիր է",
     "variable-example": "վարձակալել a variable {{count}}",
     "label.red.bestOffers": "Լավագույն առաջարկները մեզ մոտ",
-    "label.red.sellProperties": "Վաճառեք տներ, հողատարածքներ, բնակարաններ, ձեզ հարմար տարբերակով"
+    "label.red.sellProperties": "Վաճառեք տներ, հողատարածքներ, բնակարաններ, ձեզ հարմար տարբերակով",
+    "label.red.addressOffice": "0010, ՀՀ, Երևան, Մ. Խորենացու փողոց, 15",
+    "label.red.address": "Էլիտ Պլազա բիզնես կենտրոն 4-րդ հարկ"
 }
