Optimized backend calls, added native fetch api, frontside cache.

--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -246,6 +246,7 @@
     "label.contacts": "Контакты",
     "label.contract": "Тип контракта",
     "label.copyConfirmation": "Вы уверены, что хотите продублировать?",
+    "label.compare": "Сравнить",
     "label.copyHeader": "Продублировать",
     "label.courtyardImprovement": "Улучшение двора",
     "label.created": "Созданные",
