--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -987,8 +987,8 @@
     "validation.user.type.required": "Тип специалиста является обязательным",
     "validation.windowsView.required": "Расположение окон является обязательным",
     "validation.year.required": "Дата постройки обязательна",
-    "label.red.bestOffers": "Лучшие предложения у нас",
-    "label.red.sellProperties": "Продавайте дома, земельные участки, квартиры удобным для вас способом",
-    "label.red.addressOffice": "0010, РА, Ереван, ул. М. Хоренаци, 15",
+    "label.red.bestOffers": "Вдохновляйтесь на большее",
+    "label.red.sellProperties": "Продавайте и покупайте, арендуйте и сдавайте в аренду вашу квартиру, дом, коммерческую недвижимость и земельные участки.",
+    "label.red.addressOffice": " ул. Павстоса Бюзанда, 107, 7-й этаж",
     "label.red.address": "Бизнес-центр Элит Плаза, 4-й этаж"
 }
