--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -112,9 +112,9 @@
     "label.WhatIsTheProinfo": "What redinvest.am is",
     "label.WhoseNameWillBe": "Whose name can be placed on real estate sales / lease announcement?",
     "label.aboutPerson": "Biography",
-    "label.aboutProinfoDef": "redinvest.am is the only specialized website in Armenia that allows all industry professionals to become a registered user of the site and present their services on the site, to work on the site using various analytical and working tools:",
-    "label.aboutProinfoTeam": "The RedInvest team's mission essentially extends the scope of information provided to market participants, enhances its quality, creates working tools for professionals, analytical standards, and one common business portal:",
-    "label.aboutProinfoWhy": "Before placing any real estate on redinvest.am website for sale or lease, the property is examinedfor free by a RedInvest team professional:",
+    "label.aboutProinfoDef": "- RED Invest Group has been operating in the real estate market for over 10 years.\n- RED Invest Group collaborates with developers and owners with exclusive rights for sale or rental.\n- RED Invest Group’s team consists of around 50 employees.\n- 30+ projects.\n- Selected developers.\n",
+    "label.aboutProinfoTeam": "- Improved living conditions\n- Better quality of life\n- Income from capital appreciation\n- Rental income\n- Essential necessity for everyone\n",
+    "label.aboutProinfoWhy": "- Apartments\n- Houses\n- Townhouses\n- Commercial spaces\n- Land plots\n",
     "label.aboutProinfoWhy2": "  After placing any announcement in RedInvest Real Estate Website on sale or lease, the property is tested by an experienced and guaranteed head of the Information Department, after which it only appears on the website and becomes accessible to ordinary customers.:",
     "label.aboutSomeW": "About ...",
     "label.aboutUs": "About us",
@@ -871,7 +871,7 @@
     "label.proinfoAbout5_2": "Participants' professional development",
     "label.proinfoAbout5_3": "Increasing competitiveness among professionals and organizations",
     "label.proinfoAbout5_4": "Market completion, the social consequences of which is the satisfaction of customers, the quality of offered services in the market, the formation and development of a market segment on a sustainable basis and traditions:",
-    "label.proinfoMission": " what is RedInvest/Mission and creation aim",
+    "label.proinfoMission": "Why Buy Real Estate?",
     "label.projectTitle": "Project title",
     "label.projectType": "Project type",
     "label.projects": "Projects",
@@ -899,8 +899,8 @@
     "label.receiverEmailAddress": "Receiver email address",
     "label.recentPost": "Recent posts",
     "label.recommendation": "Specialist's opinion,recommendation",
-    "label.red.bestOffers": "Inspire to discover more",
-    "label.red.sellProperties": "Sell and buy, rent and lease your apartment, house, commercial property, and land.",
+    "label.red.bestOffers": "Discover your new address",
+    "label.red.sellProperties": "Sell and buy, lease and rent out your apartment, house, commercial property, and land plots",
     "label.regMyPage": "Registration / My page",
     "label.regPopupText1": "Real estate agents and real estate agencies",
     "label.regPopupText10": "In all property statuses",
@@ -1016,7 +1016,7 @@
     "label.sold": "Sold",
     "label.soldEstatesQuantityByCommunityStat": "Sold real estate statistics by communities",
     "label.specialActions": "Special actions",
-    "label.specialProinfon": "How we do it",
+    "label.specialProinfon": "What Property to Buy?",
     "label.specialProinfon1": "The site gives the client the opportunity to choose a specialist, provide high-quality advice and service.",
     "label.specialProinfon10": "Individual sales agents or agency agents can add contacts, change their status and change settings after registration, receive a letter-sender secretary service for this or that customer's current status.",
     "label.specialProinfon1_1": " The site is the only one on the territory of Armenia, where the client has the opportunity to see a professional or organization's personal page (profile), comparing it to all professionals, to choose the specialist who would like to hand over his problem solving.",
