--- a/src/app/i18n/locales/hy/common.json
+++ b/src/app/i18n/locales/hy/common.json
@@ -109,9 +109,9 @@
     "label.WhoseNameWillBe": "Ու՞մ անունով կարող է տեղադրվել անշարժ գույքի վաճառքի/վարձակալության հայտարարությունը:",
     "label.a": "ա",
     "label.aboutPerson": "Կենսագրութուն",
-    "label.aboutProinfoDef": "redinvest.am-ը ՀՀ –ում գործող   միակ մասնագիտացված կայքն է, որը հնարավորություն է տալիս ոլորտի բոլոր մասնագետներին դառնալ կայքի գրանցված օգտատեր և իրենց ծառայությունները ներկայացնել կայքում, աշխատել կայքում՝ օգտագործելով տարբեր բնույթի  վերլուծական և աշխատանքային գործիքներ:",
-    "label.aboutProinfoTeam": "RedInvest թիմի առաքելությունն է էականորեն  ընդլայնել շուկայի մասնակիցներին մատակարարվող  տեղեկատվության  ծավալները,  բարձրացնել դրա  որակը, մասնագետների համար ստեղծել աշխատանքային գործիքներ, վերլուծական չափորոշիչներ և մեկ ընդհանուր աշխատանքային հարթակ:",
-    "label.aboutProinfoWhy": "redinvest.am կայքում ցանկացած անշարժ գույք մասին  վաճառքի կամ վարձակալության հայտարարություն տեղադրելուց առաջ, գույքը անվճար տեղազննվում է RedInvest թիմի պրոֆեսիոնալ մասնագետի կողմից:",
+    "label.aboutProinfoDef": "- RED Invest Group-ը գործունեություն է ծավալում անշարժ գույքի շուկայում ավելի քան 10 տարի:\n- RED Invest Group-ը համագործակցում է կառուցապատողների և սեփականատերերի հետ վաճառքի կամ վարձակալության բացառիկ իրավունքով:\n- RED Invest Group-ի թիմը կազմված է շուրջ 50 աշխատակցից:\n- 30+ նախագիծ:\n- Ընտրված կառուցապատողներ:\n",
+    "label.aboutProinfoTeam": "- Կենցաղային պայմանների բարելավում\n\r- Կյանքի որակի լավացում\n- Եկամուտ կապիտալի աճից\n- Եկամուտ վարձակալությունից\n- Անհրաժեշտություն, որը կարիք ունեն բոլորը\n",
+    "label.aboutProinfoWhy": "- Բնակարաններ\n- Առանձնատներ\n- Թաունհաուզներ\n- Կոմերցիոն տարածքներ\n- Հողատարածքներ\n",
     "label.aboutProinfoWhy2": "redinvest.am կայքում անշարժ գույք մասին վաճառքի կամ վարձակալության ցանկացած հայտարարություն տեղադրելուց հետո գույքը  ստուգվում ինֆորմացիոն բաժնի փորձառու և աչալուրջ ղեկավարի կողմից, ինչից հետո նոր միայն հայտնվում է կայքում և հասանելի դառնում սովորական հաճախորդների համար:",
     "label.aboutSomeW": "ի մասին",
     "label.aboutUs": "Կայքի մասին",
@@ -835,7 +835,7 @@
     "label.proinfoAbout5_2": "Մասնակիցների մասնագիտական աճը",
     "label.proinfoAbout5_3": "Մասնագետների և կազմակերպությունների  միջև մրցակցության բարձրացումը",
     "label.proinfoAbout5_4": "Շուկայի ամբողջականացումը, ինչի սոցիալական հետևանքն էլ՝ հաճախորդների գոհունակությունն է,  շուկայում առաջարկվող ծառայությունների որակի բարձրացումը, կայուն հիմքերով և ավանդույթներով շուկայի սեգմենտի ձևավորումը  և զարգացումը:",
-    "label.proinfoMission": " Ի՞նչ է RedInvest-ն /առաքելությունը և ստեղծման նպատակը",
+    "label.proinfoMission": "Ինչու՞ ձեռք բերել Անշարժ Գույք",
     "label.projectTitle": "Նախագծի վերնագիր",
     "label.projectType": "Նախագծի տեսակ",
     "label.projects": "Նախագծեր",
@@ -973,7 +973,7 @@
     "label.sold": "Վաճառված",
     "label.soldEstatesQuantityByCommunityStat": "Վաճառված անշարժ գույքի վիճակագրություն ըստ համայնքների",
     "label.specialActions": "Հատուկ գործողություններ",
-    "label.specialProinfon": "Ինչո՞վ է տարբերվում redinvest.am-ը",
+    "label.specialProinfon": "Ի՞նչ Գույք Ձեռք Բերել",
     "label.specialProinfon10": "Վաճառքի անհատ գործակալները կամ գործակալություն ներկայացնող մասնագետները գրանցումից հետո կարող են ավելացնել  կոնտակտներ, կատարել կարգավիճակի և պարամետրերի փոփոխություն տվյալ բաժնում, ստանալ քարտուղար ծառայությունով ուղարկվող նամակ-առաջարկներ ընթացիկ կարգավիճակում գտնվող  այս կամ այն հաճախորդի համար:",
     "label.specialProinfon6": "Մեյլինգ",
     "label.specialProinfon8": "Պոտենցիալ հաճախորդներ ֆունկցիոնալություն",
@@ -1097,7 +1097,7 @@
     "label.whoCanReg7": "Ինտերիեր դիզայն",
     "label.whoCanReg8": "Էքստերիեր դիզայն",
     "label.whoCanReg9": "Բեռնափոխադրում",
-    "label.whyChooseProinfon": "Ինչու՞ ընտրել redinvest.am կայքը",
+    "label.whyChooseProinfon": "Ինչու ձեռք բերել Գույք RED Invest Group-ից",
     "label.whyInfoGroup": "Ինչու՞ Info Group",
     "label.whyNot ": "Ինչու ես ձեռք չէի բերի այս գույքը",
     "label.windowsView": "Պատուհանների դիրք",
@@ -1247,7 +1247,7 @@
     "validation.windowsView.required": "Պատուհանների դիրքը պարտադիր է",
     "validation.year.required": "Կառուցման տարեթիվը պարտադիր է",
     "variable-example": "վարձակալել a variable {{count}}",
-    "label.red.bestOffers": "Ոգեշնչում ենք բացահայտել ավելին",
+    "label.red.bestOffers": "Բացահայտե՛ք Ձեր նոր հասցեն",
     "label.red.sellProperties": "Վաճառեք և գնեք, վարձակալեք և հանձնեք վարձակալության Ձեր բնակարանը, առանձնատունը, կոմերցիոն տարածքն ու հողատարածքը",
     "label.red.addressOffice": " Երևան, Փավստոս Բուզանդ 107, 7֊րդ հարկ",
     "label.red.address": "Էլիտ Պլազա բիզնես կենտրոն 4-րդ հարկ"
