--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -852,7 +852,7 @@
     "label.whoCanReg7": "Интерьер дизайн",
     "label.whoCanReg8": "Экстерьер дизайн",
     "label.whoCanReg9": "Грузоперевозки",
-    "label.whyChooseProinfon": "Почему стоит выбрать redinvest.am?",
+    "label.whyChooseProinfon": "Why Buy Property from RED Invest Group?",
     "label.whyChooseProinfon1": "На сайте зарегистрированы ведущие специалисты РА в области недвижимости, которые предоставляют качественные профессиональные услуги. Здесь вы можете найти ответы на все ваши вопросы относительно недвижимости.label.whyChooseProinfon2",
     "label.whyChooseProinfon3": "Клиент, исходя из комментариев и оценок специалистов или агенств и сравнив их, может выбрать того специалиста или агентство, которому доверит решение своей проблемы.",
     "label.whyInfoGroup": "Почему RedInvest?",
@@ -987,8 +987,8 @@
     "validation.user.type.required": "Тип специалиста является обязательным",
     "validation.windowsView.required": "Расположение окон является обязательным",
     "validation.year.required": "Дата постройки обязательна",
-    "label.red.bestOffers": "Вдохновляйтесь на большее",
-    "label.red.sellProperties": "Продавайте и покупайте, арендуйте и сдавайте в аренду вашу квартиру, дом, коммерческую недвижимость и земельные участки.",
+    "label.red.bestOffers": "Откройте для себя ваш новый адрес",
+    "label.red.sellProperties": "Покупайте, продавайте, сдавайте и арендуйте вашу квартиру, дом, коммерческую недвижимость и земельные участки",
     "label.red.addressOffice": " ул. Павстоса Бюзанда, 107, 7-й этаж",
     "label.red.address": "Бизнес-центр Элит Плаза, 4-й этаж"
 }
