--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -1181,7 +1181,7 @@
     "label.yourPhone": "Your phone",
     "menu.about": "About us",
     "menu.blog": "Blog",
-    "menu.buildDevelopers": "Build developers",
+    "menu.buildDevelopers": "From constructor",
     "menu.buy": "Buy",
     "menu.contact": "Contact",
     "menu.evaluate": "Evaluation",
