--- a/src/app/i18n/locales/hy/common.json
+++ b/src/app/i18n/locales/hy/common.json
@@ -1115,7 +1115,7 @@
     "label.z": "զ",
     "menu.about": "Մեր մասին",
     "menu.blog": "Բլոգ",
-    "menu.buildDevelopers": "Կառուցապատողներ",
+    "menu.buildDevelopers": "Կառուցապատողից",
     "menu.buy": "Գնել",
     "menu.contact": "Կապ",
     "menu.evaluate": "Գնահատում",
