--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -1,7 +1,7 @@
 {
     "menu.about": "О нас",
     "menu.blog": "Блог",
-    "menu.buildDevelopers": "Застройщики",
+    "menu.buildDevelopers": "От застройщика",
     "menu.buy": "Купить",
     "menu.contact": "Контакт",
     "menu.evaluate": "Оценка",
