--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -1128,6 +1128,7 @@
     "label.unVerified": "Unverified",
     "label.updated": "Updated",
     "label.uploadImage": "Upload image",
+    "label.loadMore": "Load more",
     "label.urgent": "Urgent",
     "label.urgentAd": "Urgent Ads",
     "label.urgentAd1": "Why Use  Post on the Home Page functionality?",
@@ -1312,5 +1313,10 @@
     "validation.windowsView.required": "Windows view is required",
     "validation.year.required ": "The date of construction is required",
     "label.red.addressOffice": "Yerevan, 107 Pavstos Buzand St., 7 floor",
-    "label.red.address": "Elite Plaza Business Center, 4th floor"
+    "label.red.address": "Elite Plaza Business Center, 4th floor",
+    "developers.block": "մ-շ",
+    "developers.entry": "մուտք",
+    "developers.floor": "հարկ",
+    "developers.room": "սենյակ",
+    "developers.area_unit": "քմ"
 }
