Major bug fixes.

--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -15,6 +15,7 @@
     "button.document.checkAll": "check all photos",
     "button.document.deleteAll": "delete all photos",
     "button.download.images": "Download all images",
+    "button.download": "Download",
     "button.edit": "Edit",
     "button.electedSalesAgent": "Select",
     "button.estateMortgage.calculate": "CALCULATE",
@@ -54,6 +55,7 @@
     "button.saveClose": "Save & close",
     "button.search": "Search",
     "button.send": "Send",
+    "button.schedule": "Payment schedule",
     "button.send.handshake.request": "Send cooperation request",
     "button.sendRequest": "Send request",
     "button.suitableContacts": "Potential buyers/tenants",
@@ -261,6 +263,7 @@
     "label.contract": "Contract type",
     "label.copyConfirmation": "Are you sure you want to confirm",
     "label.copyHeader": "Copy",
+    "label.copyOk": "Copied",
     "label.courtyardImprovement": "The bilding yard improvement",
     "label.created": "Created",
     "label.createdBy": "Created by",
@@ -725,6 +728,7 @@
     "label.negReview": "Negative review",
     "label.neighbour": "Neighbour",
     "label.new": "New contact",
+    "label.newItem": "New",
     "label.newAnnouncement.afterSend": "Once you confirm your application, your property information will appear in the real estate listing of that particular agent",
     "label.newAnnouncement.estateData": "Complete your real estate details as accurate as possible",
     "label.newAnnouncement.personalInfo": "Personal information",
