--- a/src/app/i18n/locales/hy/common.json
+++ b/src/app/i18n/locales/hy/common.json
@@ -15,6 +15,7 @@
     "button.document.checkAll": "Ընտրել բոլոր նկարները",
     "button.document.deleteAll": "Ջնջել ընտրված նկարները",
     "button.download.images": "Ներբեռնել ամբողջ նկարները",
+    "button.download": "Ներբեռնել",
     "button.edit": "Խմբագրել",
     "button.electedSalesAgent": "Ընտրել",
     "button.estateMortgage.calculate": "Հաշվել",
@@ -54,6 +55,7 @@
     "button.saveClose": "Պահպանել և փակել",
     "button.search": "Փնտրել",
     "button.send": "Ուղարկել",
+    "button.schedule": "Ժամանակացույց",
     "button.send.handshake.request": "Ուղարկել համագործակցության առաջարկ",
     "button.sendRequest": "Հարցում ուղարկել",
     "button.suitableContacts": "Պոտենցիալ գնորդներ/վարձակալներ",
@@ -253,6 +255,7 @@
     "label.contract": "Գործարք",
     "label.copyConfirmation": "Վստահ եք, որ ցանկանում եք կրկնօրինակել",
     "label.copyHeader": "Կրկնօրինակել",
+    "label.copyOk": "Կրկնօրինակված է",
     "label.courtyardImprovement": "Շենքի բակի բարեկարգում",
     "label.created": "Ստեղծված",
     "label.createdBy": "Ստեղծվել է",
@@ -724,6 +727,7 @@
     "label.negReview": "Բացասական կարծիք",
     "label.neighbour": "Պատկից հարևան",
     "label.new": "Նոր կոնտակտ",
+    "label.newItem": "Նոր",
     "label.newAnnouncement.afterSend": "Հայտը հաստատելուց հետո Ձեր գույքի տվյալները կհայտնվեն տվյալ գործակալի անշարժ գույքի ցուցակում",
     "label.newAnnouncement.estateData": "Լրացրեք Ձեր անշարժ գույքի տվյալները մաքսիմալ ճիշտ",
     "label.newAnnouncement.personalInfo": "Անձնական տվյալներ",
