--- a/src/app/i18n/locales/ru/common.json
+++ b/src/app/i18n/locales/ru/common.json
@@ -23,6 +23,7 @@
     "button.document.checkAll": "Отметить все изображения",
     "button.document.deleteAll": "Удалить отмеченные изображения",
     "button.download.images": "Скачать все фото",
+    "button.download": "Скачать",
     "button.edit": "Редактировать",
     "button.electedSalesAgent": "Выбрать",
     "button.exhibition.images": "Демонстрация",
@@ -44,6 +45,7 @@
     "button.nextStep": "Следующий шаг",
     "button.no": "Нет",
     "button.ok": "Ok",
+    "button.schedule": "График платежей",
     "button.pick": "Выбрать",
     "button.pick.all": "Выбрать всех",
     "button.refresh": "Обновить",
@@ -248,6 +250,7 @@
     "label.copyConfirmation": "Вы уверены, что хотите продублировать?",
     "label.compare": "Сравнить",
     "label.copyHeader": "Продублировать",
+    "label.copyOk": "Продублирована",
     "label.courtyardImprovement": "Улучшение двора",
     "label.created": "Созданные",
     "label.createdBy": "Создано",
@@ -455,6 +458,7 @@
     "label.negReview": "Отрицательное мнение",
     "label.neighbour": "Общая стена с соседом",
     "label.new": "Новый контакт",
+    "label.newItem": "Новый",
     "label.newAnnouncement.afterSend": "Как только вы подтвердите свое заявление, ваша информация о недвижимости появится в списке недвижимости этого конкретного агента",
     "label.newAnnouncement.personalInfo": "Введите личную информацию",
     "label.newAnnouncement.professionalSelect": "Выберите своего предпочтительного специалиста по недвижимости или агентство, которому вы доверите продажу / аренду недвижимости.",
